replace garbage collector for java 21